# mlx-rerank

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md
src/: kalm.rs  main.rs
