[package]
name = "mlx-nemo-rerank"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rerank"
path = "src/main.rs"

[dependencies]
mlx-rs = "0.25"
tokenizers = { version = "0.20", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tiny_http = "0.12"

[profile.release]
opt-level = 3
