[package]
name = "mlx-rerank"
version = "0.1.0"
edition = "2021"
description = "Fast in-process MLX/Metal cross-encoder reranker server for Apple Silicon — torch-free Rust; runs NVIDIA llama-nemotron-rerank and KaLM-Reranker-V1 behind a Cohere-compatible /rerank endpoint."
repository = "https://github.com/jak-pan/mlx-rerank"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mlx", "reranker", "apple-silicon", "metal", "cross-encoder"]
categories = ["text-processing", "science"]

[[bin]]
name = "rerank"
path = "src/main.rs"

[dependencies]
mlx-rs = "0.25"
tokenizers = { version = "0.20", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tiny_http = "0.12"

[profile.release]
opt-level = 3
